argocd/aws/203403084713/clusters/cbioportal-prod/apps/cellxgene/cellxgene-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: cellxgene
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/app-root: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    ingress.kubernetes.io/proxy-connect-timeout: "300"
    ingress.kubernetes.io/proxy-read-timeout: "300"
    ingress.kubernetes.io/proxy-send-timeout: "300"
    # ingress.kubernetes.io/large-client-header-buffers: "4 32k"
    # increase max response size to avoid 413 errors see
    # https://github.com/kubernetes/ingress-nginx/issues/1824
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
    ingress.kubernetes.io/proxy-body-size: 512m
    # add proxy protocol to header
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: '*'
  name: cellxgene-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - cellxgene.cbioportal.org
      secretName: cellxgene-cert
  rules:
    - host: cellxgene.cbioportal.org
      http:
        paths:
          - path: /instances/
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
    - host: cellxgene.cbioportal.org
      http:
        paths:
          - path: /pbmc3k(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cellxgene-service-1
                port:
                  number: 8080
    - host: cellxgene.cbioportal.org
      http:
        paths:
          - path: /Q3_norm_all_batch_reduced_meta_1(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cellxgene-service-4
                port:
                  number: 8080
    - host: cellxgene.cbioportal.org
      http:
        paths:
          - path: /spectrum_all_cells(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cellxgene-service-14
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: cellxgene
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/app-root: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    ingress.kubernetes.io/proxy-connect-timeout: "300"
    ingress.kubernetes.io/proxy-read-timeout: "300"
    ingress.kubernetes.io/proxy-send-timeout: "300"
    # ingress.kubernetes.io/large-client-header-buffers: "4 32k"
    # increase max response size to avoid 413 errors see
    # https://github.com/kubernetes/ingress-nginx/issues/1824
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
    ingress.kubernetes.io/proxy-body-size: 512m
    # add proxy protocol to header
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: '*'

    # type of authentication
    # nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    # nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    # nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - foo'
#    nginx.ingress.kubernetes.io/auth-url: https://oauth2-proxy.cbioportal.org/oauth2/auth
#    nginx.ingress.kubernetes.io/auth-signin: "https://oauth2-proxy.cbioportal.org/oauth2/auth/oauth2/start?rd=https://cellxgene.cbioportal.org$escaped_request_uri"
#    nginx.ingress.kubernetes.io/configuration-snippet: |
#      auth_request_set $name_upstream_1 $upstream_cookie__oauth2_proxy_gbm_1;
#
#      access_by_lua_block {
#        if ngx.var.name_upstream_1 ~= "" then
#          ngx.header["Set-Cookie"] = "_oauth2_proxy_gbm_1=" .. ngx.var.name_upstream_1 .. ngx.var.auth_cookie:match("(; .*)")
#        end
#      }
  name: cellxgene-ingress-with-auth
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - cellxgene.cbioportal.org
      secretName: cellxgene-cert
  rules:
    - host: cellxgene.cbioportal.org
      http:
        paths:
          - path: /btc/
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-btc-service
                port:
                  number: 80
    - host: cellxgene.cbioportal.org
      http:
        paths:
          - path: /gbm_filtered_processing2(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cellxgene-service-8
                port:
                  number: 8080
          - path: /pilot_sharmalab_processed_scrna_MDA_with_inhibitor_filtered_feature_bc_matrix_prepared(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cellxgene-service-9
                port:
                  number: 8080
          - path: /pilot_sharmalab_processed_scrna_MDA_without_inhibitor_filtered_feature_bc_matrix_prepared(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cellxgene-service-10
                port:
                  number: 8080
          - path: /pilot_sharmalab_processed_scrna_MSK_no_inhibitor_filtered_feature_bc_matrix_prepared(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cellxgene-service-11
                port:
                  number: 8080
          - path: /pilot_sharmalab_processed_scrna_MSK_with_inhibitor_filtered_feature_bc_matrix_prepared(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cellxgene-service-12
                port:
                  number: 8080
          - path: /trial1a_sharma_lab_scrna_DFCI1_BTC-GBM-001-003-GEX_filtered_feature_bc_matrix_prepared(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cellxgene-service-13
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: cellxgene
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/app-root: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    ingress.kubernetes.io/proxy-connect-timeout: "300"
    ingress.kubernetes.io/proxy-read-timeout: "300"
    ingress.kubernetes.io/proxy-send-timeout: "300"
    # ingress.kubernetes.io/large-client-header-buffers: "4 32k"
    # increae max response size to avoid 413 errors see
    # https://github.com/kubernetes/ingress-nginx/issues/1824
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
    ingress.kubernetes.io/proxy-body-size: 512m
    # add proxy protocol to header
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: '*'
  name: cellxgene-ingress-static-route
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - cellxgene.cbioportal.org
      secretName: cellxgene-cert
  rules:
    - host: cellxgene.cbioportal.org
      http:
        paths:
          - path: /static(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cellxgene-service-1
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: cellxgene
  name: oauth2-proxy
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - oauth2-proxy.cbioportal.org
    secretName: oauth2-proxy-cert
  rules:
  - host: oauth2-proxy.cbioportal.org
    http:
      paths:
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy  # This points to the service we're running
            port:
              number: 4180
